# slic-hf

./: .env  .gitignore  Makefile  README.md  config.py  pyproject.toml  results.ipynb
common/: __init__.py  rm.py
data/: all_score.csv  gpt_dataset.json  positive_reviews_first_sent.json  scored_gpt_dataset.json
data/gen_results/: all_score.csv  gpt_imdb_alpha03_beta1.csv  gpt_imdb_alpha03_beta1e-1.csv  gpt_imdb_alpha05_beta1.csv  gpt_imdb_alpha05_beta1e-1.csv  gpt_imdb_alpha07_beta1.csv  gpt_imdb_alpha07_beta1e-1.csv  gpt_imdb_fkl_beta1.csv  gpt_imdb_fkl_beta1e-1.csv  gpt_imdb_jsd_beta1.csv  gpt_imdb_jsd_beta1e-1.csv  gpt_imdb_sigmoid_beta1e-1.csv  gpt_imdb_sigmoid_beta5e-1.csv  training.csv
data/scored_results/: jsd_beta1e-1.csv
dataset/: __init__.py  generate.py  generation_config.py  get_prompts.py  main.py  prepare_dataset.py  score.py
train_dpo/: __init__.py  custom_dpo_trainer.py  generate.py  train.py
