[tool.poetry]
name = "slic-hf"
version = "0.1.0"
description = ""
authors = ["Alexey Dontsov <xenon.a@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.35.2"
datasets = "^2.15.0"
torch = "^2.1.1"
trl = "^0.7.4"
wandb = "^0.16.1"
peft = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
