[tool.poetry]
name = "slic-hf"
version = "0.1.0"
description = ""
authors = ["Alexey Dontsov <xenon.a@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.35.2"
datasets = "^2.15.0"
torch = [
  {version = "^2.1.0+cu118", source = "pytorch", markers = "sys_platform == 'linux'"},
  {version = "^2.1.0", source = "PyPI", markers = "sys_platform == 'darwin'"}
]
trl = "^0.7.4"
wandb = "^0.16.1"
peft = "^0.6.2"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
